[Remote Index Client] Move remote client to a separate module (#2603)
* Moved remote index build client to a separate module

Signed-off-by: owenhalpert <ohalpert@gmail.com>

* Refactor client constructor for clarity/ to avoid static mocking, remove unused constants/methods

Signed-off-by: owenhalpert <ohalpert@gmail.com>

---------

Signed-off-by: owenhalpert <ohalpert@gmail.com>